# FeatherTail

./: .gitignore  Cargo.toml  Makefile  README.md  feathertail.toml
.github/workflows/: ci.yml  dev-build.yml  release.yml
src/: config.rs  daemon.rs  dhcp.rs  main.rs  openapi.rs  proxmox.rs  service_install.rs  vnc_assets.rs
src/auth/: mod.rs
src/routes/: mod.rs
src/routes/api/: cluster.rs  containers.rs  dhcp.rs  mod.rs  nodes.rs  proxmox.rs  servers.rs  system.rs
