[package]
name = "feathertail"
version = "1.0.2"
edition = "2024"

[dependencies]
axum = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.43", features = ["macros", "rt-multi-thread", "signal", "time", "process", "net", "sync"] }
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
utoipa = "5"
sqlx = { version = "0.8", features = ["sqlite", "runtime-tokio-rustls"] }
